--- a/tasma/network-manager/network-applet.desktop
+++ b/tasma/network-manager/network-applet.desktop
@@ -9,3 +9,4 @@ X-KDE-autostart-after=panel
 X-KDE-StartupNotify=false
 X-KDE-UniqueApplet=true
 X-KDE-autostart-condition=network-appletrc:General:AutoStart:true
+Categories=Qt;KDE;System
