--- a/trunk/planet/uludag/config.ini
+++ b/trunk/planet/uludag/config.ini
@@ -95,3 +95,7 @@ name=Ali Işıngör
 
 [http://blog.ateskusu.org/?feed=rss2]
 name=Furkan Duman
+
+[http://arda.pardusman.org/blog/tag/bilisim/pardus/feed/]
+name=Arda Çetin
+face=http://gezegen.linux.org.tr/images/heads/ardacetin.png
