Blogger'a geçme projesi çöktü efenim

--- a/planet/uludag/config.ini
+++ b/planet/uludag/config.ini
@@ -99,3 +99,6 @@ name=Furkan Duman
 [http://arda.pardusman.org/blog/tag/bilisim/pardus/feed/]
 name=Arda Çetin
 face=http://gezegen.linux.org.tr/images/heads/ardacetin.png
+
+[http://cekirdek.pardus.org.tr/~ismail/blog/rss.cgi]
+name=İsmail Dönmez
