--- a/planet/uludag/config.ini
+++ b/planet/uludag/config.ini
@@ -105,3 +105,6 @@ name=İsmail Dönmez
 
 [http://ertugerata.blogspot.com/feeds/posts/default]
 name=Ertuğrul Erata
+
+[http://zembereknlp.blogspot.com/feeds/posts/default]
+name=Zemberek NLP
