--- a/trunk/planet/planet/config.ini
+++ b/trunk/planet/planet/config.ini
@@ -2,7 +2,7 @@
 name = Planet Pardus
 link = http://planet.pardus.org.tr
 owner_name = S.Çağlar Onur
-owner_email = caglar@parduz.org.tr
+owner_email = caglar@pardus.org.tr
 
 cache_directory = /opt/planet/planet_cache
 log_level = DEBUG
