--- a/trunk/planet/planet/config.ini
+++ b/trunk/planet/planet/config.ini
@@ -29,3 +29,7 @@ name = Görkem Çetin
 
 [http://beranger.org/feed.xml]
 name = Béranger
+
+[http://cekirdek.pardus.org.tr/~loker/zangetsu/blog/feed/rss/PardusEng/]
+name = Koray Löker
+face = http://cekirdek.pardus.org.tr/~loker/dosyalar/oblomov.png
