--- a/planet/planet/config.ini
+++ b/planet/planet/config.ini
@@ -33,3 +33,7 @@ name = Béranger
 [http://cekirdek.pardus.org.tr/~loker/zangetsu/blog/feed/rss/PardusEng/]
 name = Koray Löker
 face = http://cekirdek.pardus.org.tr/~loker/dosyalar/oblomov.png
+
+[http://cekirdek.pardus.org.tr/~caglar/zangetsu/blog/feed/rss/Planet%20Pardus/]
+name = S. Çağlar Onur
+face = http://cekirdek.pardus.org.tr/~caglar/head.png
