--- a/trunk/planet/planet/config.ini
+++ b/trunk/planet/planet/config.ini
@@ -37,3 +37,7 @@ face = http://cekirdek.pardus.org.tr/~loker/dosyalar/oblomov.png
 [http://cekirdek.pardus.org.tr/~caglar/zangetsu/blog/feed/rss/Planet%20Pardus/]
 name = S. Çağlar Onur
 face = http://cekirdek.pardus.org.tr/~caglar/head.png
+
+[http://cekirdek.uludag.org.tr/~tekman/zangetsu/blog/feed/rss/English/]
+name = Erkan Tekman
+face = http://cekirdek.pardus.org.tr/~tekman/et.png
