--- a/trunk/planet/gezegen/config.ini
+++ b/trunk/planet/gezegen/config.ini
@@ -56,9 +56,9 @@ face = http://gezegen.linux.org.tr/images/heads/ahmetaygun.png
 name = Necati Demir
 face = http://demir.web.tr/foto/ndemir_head.png
 
-[http://cekirdek.pardus.org.tr/~erdinc/blog/rss.cgi]
+[http://cekirdek.pardus.org.tr/~erdinc/zangetsu/blog/feed/rss/Pardus-Gezegen/]
 name = A. Erdinç Köroğlu
-face = http://cekirdek.pardus.org.tr/~erdinc/blog/img/erdinc.png
+face = http://cekirdek.pardus.org.tr/~erdinc/img/erdinc.png
 
 [http://www.tuxworkshop.com/blog/?feed=rss2]
 name = Barış Özyurt
