--- a/planet/planet/config.ini
+++ b/planet/planet/config.ini
@@ -42,3 +42,7 @@ face = http://cekirdek.pardus.org.tr/~caglar/head.png
 [http://cekirdek.pardus.org.tr/~tekman/zangetsu/blog/feed/rss/English/]
 name = Erkan Tekman
 face = http://cekirdek.pardus.org.tr/~tekman/et.png
+
+[http://cekirdek.pardus.org.tr/~erdinc/zangetsu/blog/feed/rss/Pardus-Planet/]
+name = A. Erdinç Köroğlu
+face = http://cekirdek.pardus.org.tr/~erdinc/img/erdinc.png
