Ayan Öztürk, Ertuğrul Erata ve Rasim Akar gezegen'e iniş yaparlar...

--- a/planet/gezegen/config.ini
+++ b/planet/gezegen/config.ini
@@ -102,3 +102,12 @@ face=http://gezegen.linux.org.tr/images/heads/ardacetin.png
 
 [http://cekirdek.pardus.org.tr/~ismail/blog/rss.cgi]
 name=İsmail Dönmez
+
+[http://ertugerata.wordpress.com/feed/]
+name=Ertuğrul Erata
+
+[http://rasimakar.wordpress.com/feed/]
+name=Rasim Akar
+
+[http://www.ayanozturk.com/blog/?feed=rss2]
+name=Ayan Öztürk
