amanda kimler gelmiş

--- a/planet/gezegen/config.ini
+++ b/planet/gezegen/config.ini
@@ -103,6 +103,9 @@ face=http://gezegen.linux.org.tr/images/heads/ardacetin.png
 [http://cekirdek.pardus.org.tr/~ismail/blog/rss.cgi]
 name=İsmail Dönmez
 
+[http://zzz.fisek.com.tr/seyir-defteri/wp-rss2.php?cat=9]
+name=Doruk Fişek
+
 [http://ertugerata.wordpress.com/feed/]
 name=Ertuğrul Erata
 
