ilker kesen gezegene iner...

--- a/planet/gezegen/config.ini
+++ b/planet/gezegen/config.ini
@@ -115,3 +115,6 @@ name=Rasim Akar
 
 [http://www.ayanozturk.com/blog/?feed=rss2]
 name=Ayan Öztürk
+
+[http://ilkerkesen.org/blog/?feed=rss2&cat=5]
+name=İlker Kesen
