--- a/planet/gezegen.pardus.org.tr/config.ini
+++ b/planet/gezegen.pardus.org.tr/config.ini
@@ -4,12 +4,12 @@ link = http://gezegen.pardus.org.tr
 owner_name = S.Çağlar Onur
 owner_email = caglar@pardus.org.tr
 
-cache_directory = /opt/planet/cache
+cache_directory = /opt/planet/gezegen.pardus.org.tr/cache
 log_level = DEBUG
 
-template_files = /opt/planet/gezegen/index.html.tmpl /opt/planet/gezegen/rss20.xml.tmpl /opt/planet/gezegen/rss10.xml.tmpl /opt/planet/gezegen/opml.xml.tmpl /opt/planet/gezegen/foafroll.xml.tmpl
+template_files = /opt/planet/gezegen.pardus.org.tr/index.html.tmpl /opt/planet/gezegen.pardus.org.tr/rss20.xml.tmpl /opt/planet/gezegen.pardus.org.tr/rss10.xml.tmpl /opt/planet/gezegen.pardus.org.tr/opml.xml.tmpl /opt/planet/gezegen.pardus.org.tr/foafroll.xml.tmpl
 
-output_dir = /var/www/gezegen.uludag.org.tr/htdocs
+output_dir = /var/www/gezegen.pardus.org.tr.uludag.org.tr/htdocs
 items_per_page = 60
 days_per_page = 0
 
