--- a/trunk/planet/planet.pardus.org.tr/config.ini
+++ b/trunk/planet/planet.pardus.org.tr/config.ini
@@ -4,10 +4,10 @@ link = http://planet.pardus.org.tr
 owner_name = S.Çağlar Onur
 owner_email = caglar@pardus.org.tr
 
-cache_directory = /opt/planet/planet_cache
+cache_directory = /opt/planet/planet.pardus.org.tr/cache
 log_level = DEBUG
 
-template_files = /opt/planet/planet/index.html.tmpl /opt/planet/planet/rss20.xml.tmpl /opt/planet/planet/rss10.xml.tmpl /opt/planet/planet/opml.xml.tmpl /opt/planet/planet/foafroll.xml.tmpl
+template_files = /opt/planet/planet.pardus.org.tr/index.html.tmpl /opt/planet/planet.pardus.org.tr/rss20.xml.tmpl /opt/planet/planet.pardus.org.tr/rss10.xml.tmpl /opt/planet/planet.pardus.org.tr/opml.xml.tmpl /opt/planet/planet.pardus.org.tr/foafroll.xml.tmpl
 
 output_dir = /var/www/planet.pardus.org.tr/htdocs
 items_per_page = 60
