--- a/planet/gezegen.pardus.org.tr/config.ini
+++ b/planet/gezegen.pardus.org.tr/config.ini
@@ -80,9 +80,6 @@ face = http://cekirdek.pardus.org.tr/~loker/dosyalar/oblomov.png
 name = Faik Uygur
 face = http://cekirdek.pardus.org.tr/~faik/images/fyu.png
 
-[http://cekirdek.pardus.org.tr/~umut/blog/rss.php]
-name = Umut Pulat
-
 [http://ekin.fisek.com.tr/blog/wp-rss2.php?cat=5]
 name = Ekin Meroğlu
 
@@ -118,3 +115,6 @@ name=Ayan Öztürk
 
 [http://ilkerkesen.org/blog/?feed=rss2&cat=5]
 name=İlker Kesen
+
+[http://zembereknlp.blogspot.com/feeds/posts/default]
+name=Zemberek NLP
