uludag lafından kurtul

--- a/planet/gezegen.pardus.org.tr/config.ini
+++ b/planet/gezegen.pardus.org.tr/config.ini
@@ -9,7 +9,7 @@ log_level = DEBUG
 
 template_files = /opt/planet/gezegen.pardus.org.tr/index.html.tmpl /opt/planet/gezegen.pardus.org.tr/rss20.xml.tmpl /opt/planet/gezegen.pardus.org.tr/rss10.xml.tmpl /opt/planet/gezegen.pardus.org.tr/opml.xml.tmpl /opt/planet/gezegen.pardus.org.tr/foafroll.xml.tmpl
 
-output_dir = /var/www/gezegen.uludag.org.tr/htdocs
+output_dir = /var/www/gezegen.pardus.org.tr/htdocs
 items_per_page = 40
 days_per_page = 0
 
