--- a/trunk/planet/gezegen.pardus.org.tr/config.ini
+++ b/trunk/planet/gezegen.pardus.org.tr/config.ini
@@ -118,3 +118,6 @@ name=İlker Kesen
 
 [http://zembereknlp.blogspot.com/feeds/posts/default]
 name=Zemberek NLP
+
+[http://qwzxcv.wordpress.com/tag/pardus/feed]
+name=Eren Türkay
