--- a/planet/gezegen.pardus.org.tr/config.ini
+++ b/planet/gezegen.pardus.org.tr/config.ini
@@ -80,6 +80,10 @@ face = http://cekirdek.pardus.org.tr/~loker/dosyalar/oblomov.png
 name = Faik Uygur
 face = http://cekirdek.pardus.org.tr/~faik/images/fyu.png
 
+[http://cekirdeknotlari.blogspot.com/feeds/posts/default]
+name = Çekirdek Notları
+face = http://cekirdek.pardus.org.tr/~faik/images/fyu.png
+
 [http://ekin.fisek.com.tr/blog/wp-rss2.php?cat=5]
 name = Ekin Meroğlu
 
