Added missing pt_BR translation files (including .po and .html); comar/etc/security-comments.xml translated; Some .desktop and .directory files translated;

--- a/tasma/network-manager/network-manager.desktop
+++ b/tasma/network-manager/network-manager.desktop
@@ -3,6 +3,7 @@ Name=Network Manager
 Name[tr]=Ağ Yöneticisi
 Name[es]=Configuración de Red
 Name[de]=Netzwerk-Manager
+Name[pt_BR]=Gerenciador da Rede
 Icon=network
 X-KDE-ModuleType=Library
 X-KDE-Library=network-manager
