--- a/tasma/tasma/applnk/desktop/tasmadisplay.desktop
+++ b/tasma/tasma/applnk/desktop/tasmadisplay.desktop
@@ -14,11 +14,13 @@ Name[tr]=Görüntü
 Name[nl]=Beeldscherm
 Name[es]=Monitor
 Name[de]=Anzeige
+Name[pt_BR]=Monitor
 
 Comment=Display Settings
 Comment[tr]=Görüntü Ayarları
 Comment[nl]=Beeldscherminstellingen
 Comment[es]=Configuración de Pantalla
 Comment[de]=Anzeigeeinstellungen
+Comment[pt_BR]=Configurações do Monitor
 
 Categories=Qt;KDE;X-KDE-settings-peripherals;X-KDE-tasma-peripherals
