--- a/tasma/tasma/applnk/desktop/tasmaclock.desktop
+++ b/tasma/tasma/applnk/desktop/tasmaclock.desktop
@@ -14,17 +14,20 @@ Name[tr]=Tarih ve Saat
 Name[nl]=Datum en Tijd
 Name[es]=Fecha & Hora
 Name[de]=Datum & Uhrzeit
+Name[pt_BR]=Data & Hora
 
 Comment=Date and time settings
 Comment[tr]=Tarih ve saat ayarları
 Comment[nl]=Instellen van datum en tijd
 Comment[es]=Configuración de Fecha y Hora
 Comment[de]=Datum und Uhrzeit Einstellungen
+Comment[pt_BR]=Configurações de data e hora
 
 Keywords=clock,date,time,time zone
 Keywords[tr]=tarih,saat,saat dilimi,zaman,zaman dilimi
 Keywords[nl]=datum,tijd,tijdszone,klok
 Keywords[es]=reloj,fecha,hora,zona horaria
 Keywords[de]=Uhr,Datum,Uhrzeit,Zeitzone
+Keywords[pt_BR]=relógio,data,hora,zona horária
 
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-localization
