--- a/tasma/tasma/applnk/desktop/tasmacolors.desktop
+++ b/tasma/tasma/applnk/desktop/tasmacolors.desktop
@@ -15,17 +15,20 @@ Name[tr]=Renkler
 Name[nl]=Kleuren
 Name[es]=Colores
 Name[de]=Farben
+Name[pt_BR]=Cores
 
 Comment=Color settings
 Comment[tr]=Renk ayarları
 Comment[nl]=Kleuren instellen
 Comment[es]=Configuración de Colores
 Comment[de]=Farbeinstellungen
+Comment[pt_BR]=Configurações de cor
 
 Keywords=colors,colours,scheme,contrast,Widget colors,Color Scheme
 Keywords[tr]=renkler,şema,kontrast,Renk Tablosu
 Keywords[nl]=kleuren,kleur,schema,contrast,widgetkleuren,kleurenschema
 Keywords[es]=colores,esquema,contraste,Widget colors,Esquema de colores
 Keywords[de]=Farben,Farben,Schema,Kontrast,Widget Farben,Farbschema
+Keywords[pt_BR]=cor,cores,esquema,contraste,cores dos Widgets,Esquema de Cores
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
