--- a/tasma/tasma/applnk/desktop/tasmafontinstaller.desktop
+++ b/tasma/tasma/applnk/desktop/tasmafontinstaller.desktop
@@ -4,12 +4,14 @@ Name[tr]=Yazıtipi Kurucusu
 Name[nl]=Lettertype-installatie
 Name[es]=Instalador de Fuentes
 Name[de]=Schriftart-Installation
+Name[pt_BR]=Instalador de Fontes
 
 Comment=Install & preview fonts
 Comment[tr]=Yazıtiplerini kur ve önizle
 Comment[nl]=Lettertypen installeren en bekijken
 Comment[es]=Instalar & Previsuallizar Fuentes
 Comment[de]=Schriftarten installieren & Vorschau anzeigen
+Comment[pt_BR]=Instalar & pré-visualizar fontes
 
 X-KDE-ModuleType=Library
 X-KDE-Library=fontinst
