--- a/tasma/tasma/applnk/desktop/tasmaicons.desktop
+++ b/tasma/tasma/applnk/desktop/tasmaicons.desktop
@@ -15,16 +15,19 @@ Name[tr]=Simgeler
 Name[nl]=Pictogrammen
 Name[es]=Íconos
 Name[de]=Symbole
+Name[pt-BR]=Ícones
 
 Comment=Customize KDE Icons
 Comment[tr]=KDE Simgelerini Özelleştirir
 Comment[nl]=KDE-pictogrammen aanpassen
 Comment[de]=KDE-Symbole anpassen
+Comment[pt_BR]=Customizar Ícones do KDE
 
 Keywords=icons,effects,size,hicolor,locolor
 Keywords[tr]=simgeler,efektler,boyut,yüksek renk,düşük renk
 Keywords[nl]=iconen,pictogrammen,effecten,grootte,afmeting,formaat,kleuren
 Keywords[es]=íconos,efectos,tamaño,hicolor,locolor
 Keywords[de]=Symbole,Effekte,Grösse,hohe Farbtiefe,niedrige Farbtiefe
+Keywords[pt_BR]=ícones,efeitos,tamanho,hicolor,locolor
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
