--- a/tasma/tasma/modules/tasmatv/tasmatv.desktop
+++ b/tasma/tasma/modules/tasmatv/tasmatv.desktop
@@ -14,6 +14,7 @@ Name=Tv Card Configuration
 Name[tr]=Tv Kartı Yapılandırması
 Name[es]=Configuración de Tarjeta de TV
 Name[de]=Konfiguration der TV Karte
+Name[pt_BR]=Configuração da Placa de TV
 
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-sound
 
