--- a/trunk/tasma/package-manager/src/packagemanager-helper.desktop
+++ b/trunk/tasma/package-manager/src/packagemanager-helper.desktop
@@ -4,6 +4,7 @@ Name[tr]=Paket Yöneticisi
 Name[nl]=Pakketmanager
 Name[es]=Administrador de Paquetes
 Name[de]=Paket-Manager
+Name[pt_BR]=Gerenciador de Pacotes
 Icon=package-manager
 Type=Application
 StartupNotify=False
