--- a/trunk/tasma/package-manager/src/packagemanager.desktop
+++ b/trunk/tasma/package-manager/src/packagemanager.desktop
@@ -4,15 +4,18 @@ Name[tr]=Paket Yöneticisi
 Name[es]=Administrador de Paquetes
 Name[nl]=Toevoegen of verwijderen software
 Name[de]=Paket-Manager
+Name[pt_BR]=Gerenciador de Pacotes
 GenericName[en]=Add or Remove Software
 GenericName[tr]=Yazılım ekle ve kaldır
 GenericName[de]=Anwendung hinzufügen oder entfernen
+GenericName[pt_BR]=Adicionar ou Remover Software
 Comment=PiSi Package Manager Graphical User Interface
 Comment[en]=PiSi Package Manager Graphical User Interface
 Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
 Comment[nl]=PiSi Pakkermanager grafische gebruikersinterface
 Comment[es]=Interfaz gráfico de Administrador de Paquetes PiSi
 Comment[de]=PiSi Paket-Manager grafische Benutzeroberfläche
+Comment[pt_BR]=Interface do Usuário Gráfica do Gerenciador de Pacotes PiSi
 Icon=package-manager
 Type=Application
 Exec=package-manager
