--- a/trunk/tasma/service-manager/src/service-manager.desktop
+++ b/trunk/tasma/service-manager/src/service-manager.desktop
@@ -3,10 +3,12 @@ Name=Service Manager
 Name[tr]=Servis Yöneticisi
 Name[es]=Administrador de Servicios
 Name[de]=Dienst-Manager
+Name[pt_BR]=Gerenciador de Serviços
 GenericName[en]=Service Management Interface
 GenericName[tr]=Servis Yönetim Arabirimi
 GenericName[es]=Interfaz de Administración de Servicios
 GenericName[de]=Dienstmanagement-Schnittstelle
+GenericName[en]=Interface de Gerenciamento de Serviços
 Icon=service_manager
 X-KDE-ModuleType=Library
 X-KDE-Library=service-manager
