--- a/trunk/tasma/tasma/applnk/desktop/tasmabackground.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmabackground.desktop
@@ -15,16 +15,19 @@ Name[tr]=Arkaplan
 Name[nl]=Achtergrond
 Name[es]=Fondo
 Name[de]=Hintergrund
+Name[pt_BR]=Fundo
 
 Comment=Change the background settings
 Comment[tr]=Arkaplan ayarlarını değiştirir
 Comment[nl]=Achtergrondinstellingen wijzigen
 Comment[es]=Configuración de fondo de escritorio
 Comment[de]=Hintergrundeinstellungen änden
+Comment[pt_BR]=Mudar as configurações do fundo
 
 Keywords=background,desktops,colors,colours,images,wallpapers,blending,balance,cache,multiple wallpapers,pixmap
 Keywords[tr]=artalan,masaüstü,renkler,renkler,resimler,duvar kağıtları,karıştırma,denge,ön bellek,çoklu duvar kağıtları,pixmap
 Keywords[nl]=achtergrond,desktops,bureaubladen,kleur,kleuren,afbeeldingen,behang,wallpapers,gradiënt,vermenging,balans,cache,meerdere afbeeldingen,pixmap,graphics
 Keywords[es]=fondo,escritorios,color,colores,imagenes,imagenes de fondo,blending,balance,cache,fondos multiples,pixmap
 Keywords[de]=Hintergrund,Arbeitsflächen,Farben,Farben,Bilder,Hintergrundbilder,Vermischung,Balance,Cache,multiple Hintergrundbilder,Pixelgrafik
+Keywords[pt_BR]=fundo,áreas de trabalho,cor,cores,imagens,papéis de parede,blending,balanço,cache,papéis de parede múltiplos,pixmap
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
