--- a/trunk/tasma/tasma/applnk/desktop/tasmacomponentchooser.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmacomponentchooser.desktop
@@ -14,17 +14,20 @@ Name[tr]=Bileşen Seçici
 Name[nl]=Componentenkiezer
 Name[es]=Selector de Componentes
 Name[de]=Komponentwähler
+Name[pt_BR]=Selecionador de Componentes
 
 Comment=Choose the default components for various services
 Comment[tr]=Çeşitli servisler için öntanımlı bileşenleri seçin
 Comment[nl]=Kies de standaardcomponenten voor diverse services
 Comment[es]=Eliga los componentes por defecto para varios servicios
 Comment[de]=Standardkomponente für verschiedene Dienste auswählen
+Comment[pt_BR]=Escolher os componentes padrões para vários serviços
 
 Keywords=components,component chooser,resources, email client, terminal emulator
 Keywords[tr]=bileşenler,bileşen seçici,kaynaklar,e-posta istemcisi,terminal emülasyonu
 Keywords[nl]=componentenkiezer,gegevensbronnen,e-mailprogramma,terminal
 Keywords[es]=componentes,Selector de componentes,recursos,cliente email,emulador de terminal
 Keywords[de]=Komponente,Komponentwähler,Quellen,E-Mail-Programm,Terminal-Emulator
+Keywords[pt_BR]=componentes,selecionador de componente,recursos,cliente de email,emulador de terminal
 
 Categories=Qt;KDE;X-KDE-settings-components;X-KDE-tasma-desktop
