--- a/trunk/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
@@ -15,6 +15,7 @@ Name[tr]=Erişilebilirlik
 Name[nl]=Toegankelijkheid
 Name[es]=Accesabilidad
 Name[de]=Zugänglichkeit
+Name[pt_BR]=Acessibilidade
 
 Comment=Improve accessibility for disabled persons
 Comment[tr]=Görme sorunu olanlar için erişilebilirlik seçenekleri
