--- a/tasma/package-manager/src/tasmamanager.desktop
+++ b/tasma/package-manager/src/tasmamanager.desktop
@@ -5,12 +5,14 @@ Name[tr]=Program Ekle, Güncelle veya Kaldır
 Name[nl]=Toevoegen, bijwerken of verwijderen programma's
 Name[es]=Agregar, Actualizar o Remover Programas
 Name[de]=Programme hinzufügen, aktualisieren oder entfernen
+Name[pt_BR]=Gerenciador de Pacotes
 Comment=PiSi Package Manager Graphical User Interface
 Comment[en]=PiSi Package Manager Graphical User Interface
 Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
 Comment[nl]=PiSi pakketmanager grafische gebruikersinterface
 Comment[es]=Interfaz gráfico de Administrador de Paquetes PiSi
 Comment[de]=PiSi Paket-Manager grafische Benutzoberfläche
+Comment[pt_BR]=Interface Gráfica do Usuário do Gerenciador de Pacotes PiSi
 Icon=package-manager
 Type=Application
 X-Tasma-Fork=true
