--- a/tasma/service-manager/src/service-manager.desktop
+++ b/tasma/service-manager/src/service-manager.desktop
@@ -8,7 +8,7 @@ GenericName[en]=Service Management Interface
 GenericName[tr]=Servis Yönetim Arabirimi
 GenericName[es]=Interfaz de Administración de Servicios
 GenericName[de]=Dienstmanagement-Schnittstelle
-GenericName[en]=Interface de Gerenciamento de Serviços
+GenericName[pt_BR]=Interface de Gerenciamento de Serviços
 Icon=service_manager
 X-KDE-ModuleType=Library
 X-KDE-Library=service-manager
