--- a/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
@@ -22,11 +22,13 @@ Comment[tr]=Görme sorunu olanlar için erişilebilirlik seçenekleri
 Comment[nl]=Verbeterde toegankelijkheid voor gebruikers met een handicap
 Comment[es]=Mejora acceso para personas con disapacidades
 Comment[de]=Zugänglichkeit für Personen mit Behinderungen verbessern
+Comment[pt_BR]=Melhorar acessibilidade para pessoas com deficiência
 
 Keywords=access,accessibility,deaf,impaired,bell,audible bell,visible bell,Keyboard,keys,sticky keys,bounce keys,slow keys,mouse navigation,num pad
 Keywords[tr]=erişim,erişilebilirlik,sağır,özürlü,zil,duyulabilir zil,görünür zil,Klavye,tuşlar,yapışkan tuşlar,zıplayan tuşlar,yavaş tuşlar,fare yönlendirmesi,num pad
 Keywords[nl]=toegang,toegankelijkheid,doof,handicap,gehandicapt,bel,signalering,zichtbare meldingen,Keyboard,toetsenbord,keys,toetsen,vastgeplakte toetsen,toetsenaanslag,muisnavigatie,num pad,numerieke klavier
 Keywords[es]=acceso,accesibilidad,sordo,discapacidado,campana,campana audible,campana visible,Teclado,teclas,teclas pegajosas,bounce keys,teclas lentas,navegación de ratón,teclas numéricas
 Keywords[de]=Zugang, Erreichbarkeit,taub,beeinträchtigt,Klingel,akustische Klingel,sichtbare Klingel,Tastatur,Tasten,Sticky-Keys,Bounce-Keys,langsame Tasten, Maus-Navigation,Nummernblock
+Keywords[pt_BR]=acesso,acessibilidade,mudo,incapacitado,campainha,campainha audível,campainha visível,Teclado,teclas,teclas pegajosas,teclas saltitantes,teclas lentas,navegação do mouse,teclas numéricas
 
 Categories=Qt;KDE;X-KDE-settings-accessibility;X-KDE-tasma-localization
