--- a/tasma/tasma/applnk/desktop/tasmakhotkeys.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakhotkeys.desktop
@@ -76,7 +76,7 @@ Comment[fr]=Configurer les réglages des raccourcis-clavier
 Comment[fy]=Snelkaaien ynstelle
 Comment[gl]=Configurar opzóns de HotKeys
 Comment[he]=שינוי הגדרות מקשי הקיצור
-Comment[hi]=हॉट-की विन्यास कॉन्फ़िगर करें 
+Comment[hi]=हॉट-की विन्यास कॉन्फ़िगर करें
 Comment[hu]=A használható parancsok beállítása
 Comment[is]=Stillingar flýtilykla
 Comment[it]=Configura impostazioni di Hotkey
@@ -93,7 +93,7 @@ Comment[nn]=Set opp snøggtastar
 Comment[pa]=ਹਾਟਕੀ ਸੈਟਿੰਗ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja skrótów klawiszowych
 Comment[pt]=Configurar as opções de teclas
-Comment[pt_BR]=Configura definições de teclas de atalho
+Comment[pt_BR]=Configurar definições de teclas de atalho
 Comment[ro]=Configurează setările Hotkey
 Comment[ru]=Настройка комбинаций клавиш и росчерков мышью
 Comment[rw]=Kuboneza amagenamiterere Butozihuta
@@ -150,7 +150,7 @@ Keywords[pl]=klawisze,globalne skróty klawiszowe,schematy skrótów,gesty,mysz
 Keywords[pt]=teclas,teclas globais,esquema de teclas,atribuições de teclas,gestos,gestos com rato
 Keywords[pt_BR]=Teclas,Teclas de atalho globais,esquema de teclado,gestos, gestos do mouse
 Keywords[ro]=taste,asocieri globale de taste,schemă taste,asocieri taste,acceleratori,acceleratori aplicaţii,scurtături,gesturi
-Keywords[rw]=Buto,Ibyafataranyijwe urufunguzo rusange,Ibyafatanyijwe by'urufunguzo,Ibimenyetso,Ibimenyetso by'imbeba 
+Keywords[rw]=Buto,Ibyafataranyijwe urufunguzo rusange,Ibyafatanyijwe by'urufunguzo,Ibimenyetso,Ibimenyetso by'imbeba
 Keywords[se]=boalut,oppalaš jođánisboalut,boalločoahkádusat,boalločatnasat,njuolgobálgát,prográmmanjuolgabálgát,lihkádusat,sáhpánlihkádusat
 Keywords[sk]=Klávesy,Globálne klávesové skratky,schéma kláves,klávesové skratky,gestá,gestá myšou
 Keywords[sl]=tipke,globalne vezi tipk,vezi tipk,tipkovne vezi,gibi,miškini gibi
