--- a/tasma/tasma/applnk/desktop/tasmaksplashthememgr.desktop
+++ b/tasma/tasma/applnk/desktop/tasmaksplashthememgr.desktop
@@ -14,7 +14,7 @@ Name[tr]=Açılış ekranı
 Name[nl]=Opstartscherm
 Name[es]=Pantalla de Inicio
 Name[de]=Startbildschirm
-Name[pt_BR]=Tela de Inicialização
+Name[pt_BR]=Tela de Entrada
 
 Type=Application
 
@@ -23,13 +23,13 @@ Comment[tr]=Açılış Ekran Teması Yöneticisi
 Comment[nl]=Themabeheer voor opstartschermen
 Comment[es]=Administrador de temas para pantalla inicial
 Comment[de]=Start-Themen-Manager
-Comment[pt_BR]=Gerenciador para Temas da Tela de Inicialização
+Comment[pt_BR]=Gerenciador para Temas de Tela de Entrada
 
 Keywords=splash screen,splash theme,startup
 Keywords[tr]=açılış ekranı, açılış teması, başlangıç
 Keywords[nl]=opstartscherm,splash screen
 Keywords[es]=splash screen,pantalla de inicio,tema de inicio,inicio
 Keywords[de]=Startbildschirm,Start-Thema,Start
-Keywords[pt_BR]=tela de inicialização,tema da tela de entrada,inicialização
+Keywords[pt_BR]=tela de entrada,tema da tela de entrada,inicialização
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
