--- a/tasma/tasma/applnk/desktop/tasmaprivacy.desktop
+++ b/tasma/tasma/applnk/desktop/tasmaprivacy.desktop
@@ -6,6 +6,7 @@ Comment=Privacy - a kcontrol module to clean unwanted traces the user leaves on 
 Comment[tr]=Gizlilik - kullanıcının sistemde bıraktığı iztenilmeyen izlemeleri temizleyen kcontrol modülü
 Comment[nl]=Privacy - een configuratiemodule waarmee u ongewenste sporen die gebruikers achterlaten kunt wissen.
 Comment[de]=Privatsphäre - ein KControl Modul zum säubern der unerwünschten Spuren auf dem System
+Comment[pt_BR]=Privacidade - um módulo do kcontrol para limpar rastros indesejáveis que o usuário deixa no sistema
 
 Exec=kcmshell privacy
 
@@ -14,11 +15,13 @@ Keywords[tr]=gizlilik
 Keywords[nl]=privacy
 Keywords[es]=privacidad
 Keywords[de]=Privatsphäre
+Keywords[pt_BR]=Privacidade,privacidade
 
 Name=Privacy
 Name[tr]=Gizlilik
 Name[es]=Privacidad
 Name[de]=Privatsphäre
+Name[pt_BR]=Privacidade
 
 Terminal=false
 Type=Application
