--- a/planet/planet.pardus.org.tr/config.ini
+++ b/planet/planet.pardus.org.tr/config.ini
@@ -46,3 +46,6 @@ face = http://cekirdek.pardus.org.tr/~tekman/et.png
 [http://cekirdek.pardus.org.tr/~erdinc/zangetsu/blog/feed/rss/Pardus-Planet/]
 name = A. Erdinç Köroğlu
 face = http://cekirdek.pardus.org.tr/~erdinc/img/erdinc.png
+
+[http://beboptech.blogspot.com/]
+name =  Amine Chadly
