* this is name of the blogger...

--- a/planet/planet.pardus.org.tr/config.ini
+++ b/planet/planet.pardus.org.tr/config.ini
@@ -55,5 +55,5 @@ face = http://photos1.blogger.com/blogger/5018/1604/320/eu%20de%20novo.jpg
 name =  Amine Chadly
 
 [http://pardustimes.blogspot.com/feeds/posts/default]
-name = Pardus Times
+name = Faik Uygur
 face = http://cekirdek.pardus.org.tr/~faik/images/fyu.png
