Serkan Kaba gelsin

--- a/planet/gezegen.pardus.org.tr/config.ini
+++ b/planet/gezegen.pardus.org.tr/config.ini
@@ -128,3 +128,6 @@ name=Eren Türkay
 
 [http://talat.uyarer.com/?feed=rss2]
 name=Talat Uyarer
+
+[http://serkan-k.blogspot.com/feeds/posts/default/-/gezegen]
+name=Serkan Kaba
