Kenan Pelit gelsin

--- a/planet/gezegen.pardus.org.tr/config.ini
+++ b/planet/gezegen.pardus.org.tr/config.ini
@@ -131,3 +131,6 @@ name=Talat Uyarer
 
 [http://serkan-k.blogspot.com/feeds/posts/default/-/gezegen]
 name=Serkan Kaba
+
+[http://kpelit.org/?feed=rss2]
+name=Kenan Pelit
