--- a/tasma/tasma/applnk/desktop/tasmakcmtaskbar.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakcmtaskbar.desktop
@@ -16,6 +16,7 @@ Name[nl]=Taakbalk
 Name[es]=Barra de Tareas
 Name[de]=Taskleiste
 Name[pt_BR]=Barra de Tarefas
+Name[fr]=Barre des tâches
 
 Comment=Configure the panel taskbar
 Comment[tr]=Panel görev çubuğunu yapılandır
@@ -23,6 +24,7 @@ Comment[nl]=Hier kunt u de taakbalk van het paneel instellen
 Comment[es]=Configuración de barra de tareas del panel
 Comment[de]=Taskleiste konfigurieren
 Comment[pt_BR]=Configurar o painel da barra de tarefas
+Comment[fr]=Configurer la barre des tâches du panneau de configuration
 
 Keywords=kicker,panel,kpanel,taskbar,startbar,launchbar,windows
 Keywords[tr]=kicker,panel,kpanel,görev çubuğu,başlangıç çubuğu,yükleme çubuğu,pencere,pencereler
@@ -30,5 +32,6 @@ Keywords[nl]=kicker,panel,paneel,kpanel,takenbalk,startbalk,launchbar,startmenu,
 Keywords[es]=kicker,panel,kpanel,barra de tareas,barra de inicio,launchbar,ventanas
 Keywords[de]=Kicker,Leiste,KPanel,Taskleiste,Startleiste,Startleiste,Fenster
 Keywords[pt_BR]=kicker,painel,kpanel,barra de tarefas,barra de início,barra de lançamento,janelas
+Keywords[fr]=kicker,panneau,kpanel,barre des tâches,barre de démarrage,barre de lancement,fenêtres
 
 Categories=Qt;KDE;X-KDE-settings-desktop;X-KDE-tasma-desktop
