--- a/tasma/tasma/applnk/desktop/tasmaclock.desktop
+++ b/tasma/tasma/applnk/desktop/tasmaclock.desktop
@@ -15,6 +15,7 @@ Name[nl]=Datum en Tijd
 Name[es]=Fecha & Hora
 Name[de]=Datum & Uhrzeit
 Name[pt_BR]=Data & Hora
+Name[fr]=Date & Heure
 
 Comment=Date and time settings
 Comment[tr]=Tarih ve saat ayarları
@@ -22,6 +23,7 @@ Comment[nl]=Instellen van datum en tijd
 Comment[es]=Configuración de Fecha y Hora
 Comment[de]=Datum und Uhrzeit Einstellungen
 Comment[pt_BR]=Configurações de data e hora
+Comment[fr]=Configuration de la date et de l'heure
 
 Keywords=clock,date,time,time zone
 Keywords[tr]=tarih,saat,saat dilimi,zaman,zaman dilimi
@@ -29,5 +31,6 @@ Keywords[nl]=datum,tijd,tijdszone,klok
 Keywords[es]=reloj,fecha,hora,zona horaria
 Keywords[de]=Uhr,Datum,Uhrzeit,Zeitzone
 Keywords[pt_BR]=relógio,data,hora,zona horária
+Keywords[fr]=horloge,date,heure,zone horaire
 
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-localization
