--- a/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
@@ -16,6 +16,7 @@ Name[nl]=Toegankelijkheid
 Name[es]=Accesabilidad
 Name[de]=Zugänglichkeit
 Name[pt_BR]=Acessibilidade
+Name[fr]=Accessibilité
 
 Comment=Improve accessibility for disabled persons
 Comment[tr]=Görme sorunu olanlar için erişilebilirlik seçenekleri
@@ -23,6 +24,7 @@ Comment[nl]=Verbeterde toegankelijkheid voor gebruikers met een handicap
 Comment[es]=Mejora acceso para personas con disapacidades
 Comment[de]=Zugänglichkeit für Personen mit Behinderungen verbessern
 Comment[pt_BR]=Melhorar acessibilidade para pessoas com deficiência
+Comment[fr]=Améliorer l'accéssibilités pour les personnes handicapées
 
 Keywords=access,accessibility,deaf,impaired,bell,audible bell,visible bell,Keyboard,keys,sticky keys,bounce keys,slow keys,mouse navigation,num pad
 Keywords[tr]=erişim,erişilebilirlik,sağır,özürlü,zil,duyulabilir zil,görünür zil,Klavye,tuşlar,yapışkan tuşlar,zıplayan tuşlar,yavaş tuşlar,fare yönlendirmesi,num pad
@@ -30,5 +32,6 @@ Keywords[nl]=toegang,toegankelijkheid,doof,handicap,gehandicapt,bel,signalering,
 Keywords[es]=acceso,accesibilidad,sordo,discapacidado,campana,campana audible,campana visible,Teclado,teclas,teclas pegajosas,bounce keys,teclas lentas,navegación de ratón,teclas numéricas
 Keywords[de]=Zugang, Erreichbarkeit,taub,beeinträchtigt,Klingel,akustische Klingel,sichtbare Klingel,Tastatur,Tasten,Sticky-Keys,Bounce-Keys,langsame Tasten, Maus-Navigation,Nummernblock
 Keywords[pt_BR]=acesso,acessibilidade,mudo,incapacitado,campainha,campainha audível,campainha visível,Teclado,teclas,teclas pegajosas,teclas saltitantes,teclas lentas,navegação do mouse,teclas numéricas
+Keywords[fr]=accès,accessibilité,sourd,handicapé,alerte,alerte sonore,alerte visuelle,Clavier,touches,touches collantes,touches rebondissantes,touches lentes,navigation à la souris,pavé numérique
 
 Categories=Qt;KDE;X-KDE-settings-accessibility;X-KDE-tasma-localization
