--- a/planet/gezegen.pardus.org.tr/config.ini
+++ b/planet/gezegen.pardus.org.tr/config.ini
@@ -131,6 +131,7 @@ name=Talat Uyarer
 
 [http://serkan-k.blogspot.com/feeds/posts/default/-/gezegen]
 name=Serkan Kaba
+face=http://cekirdek.pardus.org.tr/~baris/img/serkankmr7.jpg
 
 [http://kpelit.org/?feed=rss2]
 name=Kenan Pelit
