--- a/tasma/tasma/applnk/desktop/tasmakwindecoration.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakwindecoration.desktop
@@ -15,6 +15,7 @@ Name[nl]=Vensterdecoraties
 Name[es]=Decoraciones de Ventanas
 Name[de]=Fensterdekoration
 Name[pt_BR]=Decorações das Janelas
+Name[fr]=Décorations des fenêtres
 
 Comment=Configure the look and feel of window titles
 Comment[tr]=Pencere başlıklarını görünümlerini yapılandır
@@ -22,6 +23,7 @@ Comment[nl]=Hier kunt u het uiterlijk en gedrag van venstertitels instellen
 Comment[es]=Configuración de look & feel de los títulos de las ventanas
 Comment[de]=Die äussere Erscheinung und Titeln von Fenstern konfigurieren
 Comment[pt_BR]=Configurar o visual dos títulos das janelas
+Comment[ffr]=Configurer le rendu visuel des titres de fenêtres
 
 Keywords=kwin,window,manager,border,style,theme,look,feel,layout,button,handle,edge,kwm,decoration
 Keywords[tr]=kwin,pencere,yönetici,kenar,stil,tema,görünüş,doku,yerleşim,düğme,tutamaç,kenar,kwm,dekorasyon
@@ -29,5 +31,6 @@ Keywords[nl]=kwin,window,manager,rand,stijl,theme,thema,look,uiterlijk,gedrag,fe
 Keywords[es]=kwin,ventana,administrador,borde,estilo,tema,look,feel,layout,botón,handle,esquina,kwm,decoración
 Keywords[de]=KWin,Fenster,Manager,Rahmen,Stil,Thema,Aussehen,Titel,Layout,Schaltfläche,Griff,Rand,KWm,Dekoration
 Keywords[pt_BR]=kwin,janela,gerenciador,borda,estilo,tema,visual,layout,botão,handle,canto,kwm,decoração
+Keywords[fr]=kwin,fenêtre,gestionnaire,bord,style,thème,rendu visuel,impressions,disposition,boutton,prise en main,bord,kwm,décoration
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
