--- a/tasma/tasma/applnk/desktop/tasmakwinoptions.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakwinoptions.desktop
@@ -15,6 +15,7 @@ Name[nl]=Venstergedrag
 Name[es]=Comportamiento de Ventanas
 Name[de]=Fensterverhalten
 Name[pt_BR]=Comportamento da Janelas
+Name[fr]=Comportement des fenêtres
 
 Comment=Configure the window behavior
 Comment[tr]=Pencere davranışlarını yapılandır
@@ -22,6 +23,7 @@ Comment[nl]=Stel het venstergedrag in
 Comment[es]=Configuración de comportamiento de ventanas
 Comment[de]=Fensterverhalten konfigurieren
 Comment[pt_BR]=Configurar o comportamento de janelas
+Comment[fr]=Configurer le comportement des fenêtres
 
 Keywords=focus,placement,window behavior,animation,raise,auto raise,windows,frame,titlebar,doubleclick
 Keywords[tr]=odak,odak davranış biçimi,pencere yerleşimi,pencere davranışı,Yerleşim davranış biçimi,animasyon,kaldır,otomatik kaldır,çerçeve,çift tıkla
@@ -29,5 +31,6 @@ Keywords[nl]=focusbeleid,vensterplaatsing,venstergedrag,focus,window,plaatsing,p
 Keywords[es]=foco,ubicación,comportamiento de ventana,animación,activar,activar automatico,ventanas,marco,barra de título,dobleclic
 Keywords[de]=Fokus,Platzierung,Fensterverhalten,Animation,heben,automatisch heben,Fenster,Rahmen,Titelleiste,Doppelklick
 Keywords[pt_BR]=foco,posicionamento,comportamento de janela,animação,elevar,auto-elevar,janelas,quadro,barra de título,clique duplo
+Keywords[fr]=focus,placement,comportement des fenêtres,animation,élever,auto-élévation,fenêtres,cadre,barre de titre,double clic
 
 Categories=Qt;KDE;X-KDE-settings-desktop;X-KDE-tasma-desktop
