--- a/tasma/tasma/applnk/desktop/tasmalanguage.desktop
+++ b/tasma/tasma/applnk/desktop/tasmalanguage.desktop
@@ -16,6 +16,7 @@ Name[nl]=Land/regio en taal
 Name[es]=País/Región & Idioma
 Name[de]=Land/Region & Sprache
 Name[pt_BR]=País/Região & Língua
+Name[fr]=Pays/Région & Langue
 
 Comment=Language, numeric, and time settings for your particular region
 Comment[tr]=Bölgenize özgü dil, sayı ve zaman ayarları
@@ -23,6 +24,7 @@ Comment[nl]=Taal-, numerieke, en tijdsinstelling voor uw eigen regio
 Comment[es]=Configuración de Idioma, formato de Número y Fecha para la región
 Comment[de]=Sprach-, Ziffer- und Zeiteinstellungen für die von Ihen gewählte Region
 Comment[pt_BR]=Configurações de Língua, numéricas e de hora para sua região
+Comment[fr]=Langue, paramètres numériques et temporels régionaux
 
 Keywords=language,translation,number format,currency,time,date,formats,locale,Country,charsets,character sets,Decimal symbol,Thousands separator,symbol,separator,sign,positive,negative,fractional digits,week,week start
 Keywords[tr]=dil,çeviri,sayı biçimi,para,saat,tarih,biçimler,yerel,ülke,karakter kümeleri, ondalık sembolü,binler ayıracı,sembol,ayırıcı,işaret,pozitif,negatif,ondalık basamaklar,hafta,hafta başı
@@ -30,5 +32,6 @@ Keywords[nl]=language,vertaling,taal,getallenopmaak,valuta,valutasymbool,tijd,da
 Keywords[es]=idioma,traducción,formato de número,moneda,Hora,Fecha,formatos,locale,país,juego de caracteres,charsets,Símbolo decimal,Separador de miles,símbolo,separador,sign,positivo,negativo,posiciones decimales,semana,inicio de semana
 Keywords[de]=Sprache,Übersetzung,Nummernformat,Währung,Uhrzeit,Datum,Formate,lokale,Land,Zeichenkodierungen,Zeichenkodierung,Dezimalzeichen,Tausendertrennzeichen,Zeichen,Trennzeichen,Vorzeichen,positiv,negativ,minimal Anzahl der Zahlstellen,Woche, Wochenbeginn
 Keywords[pt_BR]=língua,tradução,formato numérico,moeda,hora,data,formatos,local,País,conjunto de caracteres,Símbolos decimais,Separador de milhares,símbolo,separador,sinal,positivo,negativo,dígitos fracionários,semana,início da semana
+Keywords[fr]=langue,traduction,format numérique,monnaie,temps,date,formats,localisation,Pays,jeux de caractères,Symbols décimaux,séparateur des mille,symbole,séparateur,signe,positif,négatif,chiffres après la virgule,semaine,debut de la semaine
 
 Categories=Qt;KDE;X-KDE-settings-accessibility;X-KDE-tasma-localization
