--- a/tasma/tasma/applnk/desktop/tasmascreensaver.desktop
+++ b/tasma/tasma/applnk/desktop/tasmascreensaver.desktop
@@ -16,6 +16,7 @@ Name[nl]=Schermbeveiliging
 Name[es]=Protector de Pantalla
 Name[de]=Bildschirmschoner
 Name[pt_BR]=Protetor de Tela
+Name[fr]=Économiseur d'écran
 
 Comment=Screen Saver Settings
 Comment[tr]=Ekran Koruyucusu Ayarları
@@ -23,6 +24,7 @@ Comment[nl]=Schermbeveiliging instellen
 Comment[es]=Configuración de Protector de Pantalla
 Comment[de]=Bildschirmschoner Einstellungen
 Comment[pt_BR]=Configurações do Protetor de Tela
+Comment[fr]=Configuration de l'économiseur d'écran
 
 Keywords=screensavers,Priority
 Keywords[tr]=ekran koruyucular,Öncelik,ekran koruyucusu,ekran koruyucuları
@@ -30,5 +32,6 @@ Keywords[nl]=screensavers,schermbeveiliging,prioriteit,schermvergrendeling
 Keywords[es]=protectores de pantalla,Prioridad
 Keywords[de]=Bildschirmschoner,Priorität
 Keywords[pt_BR]=protetores de tela,Prioridade
+Keywords[fr]=économiseurs d'écran,Priorité
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
